# OOP3

./: CMakeLists.txt  README.md  main.cpp
include/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp
src/: array.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp
test/: tests.cpp
